<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">経路検索</string>
    <string name="action_settings">Settings</string>
    <string name="map_path">SiCREW/MAP</string>
    <string name="search_path">SiCREW/SEARCH</string>
    <string name="route_path">SiCREW/ROUTE</string>
    <string name="finish">終了</string>
    <string name="cancel">キャンセル</string>
    <string name="confirm_finish">終了しますか？"</string>
    <string name="error">エラー</string>
    <string name="route_init_fail">ルートの初期化に失敗しました</string>
    <string name="ok">OK</string>
    <string name="route_point_invalid">有効な地点ではありません 別の地点を指定してください</string>
    <string name="route_setting">ルート設定</string>
    <string name="info_route_clear">設定中のポイント情報、ルート情報をクリアします</string>
    <string name="route_start_none">出発地が設定されていません</string>
    <string name="route_goal_none">目的地が設定されていません</string>
    <string name="route_fatal_error">経路探索処理で問題が発生</string>
    <string name="route_isolated_island">離島が原因で探索できませんでした</string>
    <string name="route_no_transit_link">経路が見つかりませんでした</string>
    <string name="route_time_reg">時間規制により経路が見つかりませんでした</string>
    <string name="route_version_miss_match">データのバージョンが不適切でした</string>
    <string name="route_unknown_error">不明なエラー</string>
    <string name="route_error_message">経路探索に失敗しました\nエラーコード：</string>
    <string name="set_start_point">出発地に設定</string>
    <string name="set_via_point">立寄地に設定</string>
    <string name="set_goal_point">目的地に設定</string>
    <string name="route_search">ルート探索実行</string>
    <string name="route_clear">ルート消去</string>
    <string name="start_point">出発地</string>
    <string name="goal_point">目的地</string>
    <string name="via_point">立寄地</string>
    <string name="route_exit">終了</string>
</resources>
