<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/BtnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_start_point" />
    <Button
        android:id="@+id/BtnVia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_via_point" />
    <Button
        android:id="@+id/BtnSGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_goal_point" />
    <Button
        android:id="@+id/BtnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_clear" />
    <Button
        android:id="@+id/BtnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_search" />
    <Button
        android:id="@+id/BtnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_exit" />
</LinearLayout>
